commit initial changes

--- a/ss.html
+++ b/ss.html
@@ -10,14 +10,14 @@
 <body>
         <div class="container">
             <div>
-                <h3 id="hoe">HOME</h3>
+                <h3 id="hoe">Home</h3>
                 <h3 id="home-board">0</h3>
                 <button onclick="homeone()">+1</button>
                 <button onclick="hometwo()">+2</button>
                 <button onclick="homethree()">+3</button>
             </div>
             <div>
-                <h3 id="hoe">GUEST</h3>
+                <h3 id="hoe">Away</h3>
                 <h3 id="guest-board">0</h3>
                 <button onclick="guestone()">+1</button>
                 <button onclick="guesttwo()">+2</button>
